testing inventory adding method

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
     <div class="gamewindow">
         <div class="container">
-                <!-- <video class="robodog" autoplay>
-                    <source src="/Video%20Scene/Untitled design.mp4" type="video/mp4">
-                </video> -->
-                <img class="startingphoto" src="assets/Image/toyroom2.jpeg">
-            </div>
+        <!-- <video class="robodog" autoplay>
+            <source src="/Video%20Scene/Untitled design.mp4" type="video/mp4">
+        </video> -->
+        <img class="startingphoto" src="assets/Image/toyroom2.jpeg">
+             <!-- <div class="inventory"></div> -->
         </div>
+    </div>
         <div class="questionbox"></div>
         <div id="option-buttons"></div>
    
