added story node class

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
         <div class="questionbox"></div>
         <div id="option-buttons"></div>
+        <div id="story-button"></div>
    
         
     </div>
