added inventory function, adding and removal of items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <h1>Escape the Cave</h1> -->
 
     <div class="gamewindow">
-        <div class="container">
+        <div class="container"></div>
         <!-- <video class="robodog" autoplay>
             <source src="/Video%20Scene/Untitled design.mp4" type="video/mp4">
         </video> -->
