--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
     <div class="gamewindow">
         <div class="container"></div>
+        <div class="volumebtn"></div>
+        <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
         <!-- <video class="robodog" autoplay>
             <source src="/Video%20Scene/Untitled design.mp4" type="video/mp4">
         </video> -->
         <img class="startingphoto" src="assets/Image/toyroom2.jpeg">
-             <!-- <div class="inventory"></div> -->
         </div>
     </div>
         <div class="questionbox"></div>
