--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
     <script src="src/Simple-Text-Typing-Animation-with-jQuery-Typed-Text/src/jquery.typedtext.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0-rc.2/jquery-ui.min.js" integrity="sha256-RQLbEU539dpygNMsBGZlplus6CkitaLy0btTCHcULpI=" crossorigin="anonymous"></script>
-    <script src="inventory.js" charset="utf-8"></script>
+    <!-- <script src="inventory.js" charset="utf-8"></script> -->
     <script src="app_ui.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
     <script src="nodelist.js" charset="utf-8"></script>
@@ -21,15 +21,13 @@
     <div class="gamewindow">
         <div class="container"></div>
         <div class="volumebtn"></div>
-        <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
-        <!-- <video class="robodog" autoplay>
-            <source src="/Video%20Scene/Untitled design.mp4" type="video/mp4">
-        </video> -->
-        <img class="startingphoto" src="assets/Image/toyroom2.jpeg">
+        <!-- <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio> -->
+        <img class="startingphoto">
         </div>
     </div>
         <div class="questionbox"></div>
         <div id="option-buttons"></div>
+        <div id="homepage-buttons"></div>
         <div id="story-button"></div>
    
         
