modal popup box created for instructions and credits button on homepage

--- a/index.html
+++ b/index.html
@@ -19,11 +19,32 @@
     <!-- <h1>Escape the Cave</h1> -->
 
     <div class="gamewindow">
-        <div class="container"></div>
+        <div class="container"></div> 
+        <!-- container is for inventory -->
         <div class="volumebtn"></div>
-        <!-- <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio> -->
+        <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
         <img class="startingphoto">
-        </div>
+
+        <!-- instruction modal-->
+            <div id="instructioncontent">
+                <div id="instructionclosebtn">
+                    <span class="closebtn">Close</span>
+                </div>
+                <h2>How to play</h2>
+                <p>Here is how you play...</p>
+            </div>  
+
+         <!-- credits modal-->
+         <div id="creditscontent">
+            <div id="creditsclosebtn">
+                <span class="closebtn">Close</span>
+            </div>
+            <h2>Credits</h2>
+            <p>Here are the credits roll...</p>
+        </div>  
+
+
+    </div>
     </div>
         <div class="questionbox"></div>
         <div id="option-buttons"></div>
