added home button to exit game to homepage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="container"></div> 
         <!-- container is for inventory -->
         <div class="volumebtn"></div>
-        <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
+        <div class="homebtn"></div>
+        <!-- <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio> -->
         <img class="startingphoto">
 
         <!-- instruction modal-->
