added speeding up function for typing animation (story only)

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
     </div>
     </div>
         <div class="questionbox"></div>
+        <div class="skipquestionbox"></div>
         <div id="option-buttons"></div>
+        <div id="skip-option-buttons"></div>
         <div id="homepage-buttons"></div>
+        <div id="speedupbtn"></div>
+        <div id="slowdownbtn"></div>
         <div id="story-button"></div>
    
         
