--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="src/Simple-Text-Typing-Animation-with-jQuery-Typed-Text/src/jquery.typedtext.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0-rc.2/jquery-ui.min.js" integrity="sha256-RQLbEU539dpygNMsBGZlplus6CkitaLy0btTCHcULpI=" crossorigin="anonymous"></script>
     <script src="app_ui.js" charset="utf-8"></script>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="classlist.js" charset="utf-8"></script>
     <script src="nodelist.js" charset="utf-8"></script>
+    <script src="startgame.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -22,7 +23,7 @@
         <!-- container is for inventory -->
         <div class="volumebtn"></div>
         <div class="homebtn"></div>
-        <!-- <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio> -->
+        <audio autoplay loop><source src="/assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
         <img class="startingphoto">
 
         <!-- instruction modal-->
