cset audio to muted and changed volume toggle

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- container is for inventory -->
         <div class="volumebtn"></div>
         <div class="homebtn"></div>
-        <audio autoplay loop><source src="assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
+        <audio autoplay muted loop><source src="assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
         <img class="startingphoto">
 
         <!-- instruction modal-->
