renamed styles sheet

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="nodelist.js" charset="utf-8"></script>
     <script src="app_ui.js" charset="utf-8"></script>
     <script src="startgame.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>MoMoWonderLand</title>
 </head>
 
