adding content to instruction box

--- a/index.html
+++ b/index.html
@@ -22,40 +22,46 @@
         <div class="container"></div> 
         <!-- container is for inventory -->
         <div class="volumebtn"></div>
+        <div id="speedupbtn"></div>
+        <div id="slowdownbtn"></div>
         <div class="homebtn"></div>
-        <audio autoplay muted loop><source src="assets/sound/Dahlia's Guidance.mp3" type="audio/mp3"></audio>
+        <audio autoplay muted loop><source src="assets/sound/DahliasGuidance.mp3" type="audio/mp3"></audio>
         <img class="startingphoto">
 
         <!-- instruction modal-->
             <div id="instructioncontent">
                 <div id="instructionclosebtn">
-                    <span class="closebtn">Close</span>
+                    <span class="closebtn">close</span>
                 </div>
-                <h2>How to play</h2>
-                <p>Here is how you play...</p>
+                <p class='instructionheadings'>How to play</p>
+                <p>There are two objectives to this game:<br> 1. Escape without meeting MoMo <br> 2. Try to collect evidence on the way<br> Pick up items along the way to help with your escape. However, some routes are only possible if you choose to certain items<br>
+                <p class='instructionheadings'>Who is MoMo?</p>
+                <p>MoMo is a humanoid bird monster that gained notoriety through the viral MoMo challenge in 2018. She will be hunting you at every step of your escape so avoid her at all cost</p>       
+                <p><span style="color:red">WARNING:<br></span> There will be jumpscares in this game generated randomly</p>
+                </p>
+                <img class="instructionlogo" src="assets/icon/rabbit.png">
+                <p>This rabbit logo speeds up the typing animation of the story</p>
+                <img class="instructionlogo" src="assets/icon/tortoise.png">
+                <p>This tortoise logo slows down the typing animation of the story, which is the default</p>
             </div>  
 
-         <!-- credits modal-->
-         <div id="creditscontent">
-            <div id="creditsclosebtn">
-                <span class="closebtn">Close</span>
-            </div>
-            <h2>Credits</h2>
-            <p>Here are the credits roll...</p>
+        <!-- credits modal-->
+        <div id="creditscontent">
+        <div id="creditsclosebtn">
+            <span class="closebtn">Close</span>
+        </div>
+        <h2>Credits</h2>
+        <p>Here are the credits roll...</p>
         </div>  
+        </div>
 
-
-    </div>
-    </div>
-        <div class="questionbox"></div>
-        <div class="skipquestionbox"></div>
-        <div id="option-buttons"></div>
-        <div id="skip-option-buttons"></div>
-        <div id="homepage-buttons"></div>
-        <div id="speedupbtn"></div>
-        <div id="slowdownbtn"></div>
-        <div id="story-button"></div>
-    </div>
+    <div class="questionbox"></div>
+    <!-- <div class="skipquestionbox"></div> -->
+    <div id="option-buttons"></div>
+    <!-- <div id="skip-option-buttons"></div> -->
+    <div id="homepage-buttons"></div>
+    <div id="story-button"></div>
+    
 
    
 </body>
