finalized instruction box

--- a/index.html
+++ b/index.html
@@ -33,16 +33,24 @@
                 <div id="instructionclosebtn">
                     <span class="closebtn">close</span>
                 </div>
+
                 <p class='instructionheadings'>How to play</p>
                 <p>There are two objectives to this game:<br> 1. Escape without meeting MoMo <br> 2. Try to collect evidence on the way<br> Pick up items along the way to help with your escape. However, some routes are only possible if you choose to certain items<br>
                 <p class='instructionheadings'>Who is MoMo?</p>
-                <p>MoMo is a humanoid bird monster that gained notoriety through the viral MoMo challenge in 2018. She will be hunting you at every step of your escape so avoid her at all cost</p>       
-                <p><span style="color:red">WARNING:<br></span> There will be jumpscares in this game generated randomly</p>
-                </p>
-                <img class="instructionlogo" src="assets/icon/rabbit.png">
-                <p>This rabbit logo speeds up the typing animation of the story</p>
+                <p>MoMo is a humanoid bird monster that gained notoriety through the viral MoMo challenge in 2018. She will be hunting you at every step of your escape so avoid her at all cost</p> 
+
+                <p class='instructionheadings'>Game Controls</p>
+                <img class="instructionlogo" src="assets/icon/volume.png">
+                <img class="instructionlogo" src="assets/icon/mute.png"> 
+                <p>Volume is muted by default, toggle to turn on/off music. <br> *Refresh the page if music is not playing</p>
                 <img class="instructionlogo" src="assets/icon/tortoise.png">
                 <p>This tortoise logo slows down the typing animation of the story, which is the default</p>
+                <img class="instructionlogo" src="assets/icon/rabbit.png">
+                <p>This rabbit logo speeds up the typing animation of the story</p>
+                <img class="instructionlogo" src="assets/icon/home.png">
+                <p>Clicking this brings you back to the homepage<br><br></p>
+
+                <p><span style="color:red">WARNING:<br></span> There will be jumpscares in this game generated randomly</p>
             </div>  
 
         <!-- credits modal-->
