--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
-    <script src="typedText/Simple-Text-Typing-Animation-with-jQuery-Typed-Text/src/jquery.typedtext.js"></script>
+    <script src="plugins/typedText/Simple-Text-Typing-Animation-with-jQuery-Typed-Text/src/jquery.typedtext.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0-rc.2/jquery-ui.min.js" integrity="sha256-RQLbEU539dpygNMsBGZlplus6CkitaLy0btTCHcULpI=" crossorigin="anonymous"></script>
-    <script src="classlist.js" charset="utf-8"></script>
-    <script src="nodelist.js" charset="utf-8"></script>
-    <script src="app_ui.js" charset="utf-8"></script>
-    <script src="startgame.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="js/classlist.js" charset="utf-8"></script>
+    <script src="js/nodelist.js" charset="utf-8"></script>
+    <script src="js/app_ui.js" charset="utf-8"></script>
+    <script src="js/startgame.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>MoMoWonderLand</title>
 </head>
 
