--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="closebtn">close</span>
                 </div>
                 <p class='instructionheadings'>How to play</p>
-                <p>There are two objectives to this game:<br> 1. Escape without meeting MoMo <br> 2. Try to collect evidence on the way<br> Pick up items along the way to help with your escape. However, some routes are only possible if you choose to certain items<br>
+                <p>There are two objectives to this game:<br> 1. Escape without meeting MoMo <br> 2. Try to collect evidence on the way<br> Pick up items along the way to help with your escape. However, some routes are only possible if you choose to forgo certain items<br>
                 <p class='instructionheadings'>Who is MoMo?</p>
                 <p>MoMo is a humanoid bird monster that gained notoriety through the viral MoMo challenge in 2018. She will be hunting you at every step of your escape so avoid her at all cost</p> 
                 <p class='instructionheadings'>Game Controls</p>
@@ -56,8 +56,6 @@
     <!-- <div id="skip-option-buttons"></div> -->
     <div id="homepage-buttons"></div>
     <div id="story-button"></div>
-    
 
-   
 </body>
 </html>
